# python-rest-fastapi

./: .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  environment.yml  pyproject.toml
conf/: log_config.yaml
src/: app.py  util.py
src/api/users/: schemas.py  users.py
src/db/: database.py
src/db/users/: crud.py  models.py
